--- a/front/section_4/section_4.html
+++ b/front/section_4/section_4.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                <div class="col-md-12">
-                <h1>Explore Our Work</h1>
+                <h2 class="titre">Explore Our Work</h2>
             </div>
         </div>
         <div class="row">
@@ -26,24 +26,24 @@
             <div class="col-md-3" class="div1">
                 <img src="imag1.png" alt="" class="img-fluid">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" class="div1">
                 <img src="img7.png" alt="" class="img-fluid">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" class="div1">
                 <img src="image3.png" alt="" class="img-fluid">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" class="div1">
                 <img src="image4.png" alt="" class="img-fluid">
             </div>
         </div>
         <div class="row ">
-            <div class="col-md-3">
+            <div class="col-md-3" class="div1">
                 <img src="imag5.png" alt="" class="img-fluid">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" class="div1">
                 <img src="imag6.png" alt="" class="img-fluid">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" class="div1">
                 <img src="img7.png" alt="" class="img-fluid">
             </div>
             <div class="col-md-3 img9">
