--- a/front/All_Section/Our_Team/section3/section3.html
+++ b/front/All_Section/Our_Team/section3/section3.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <img src="les images à gauche.png" alt="" class="les_images_à_gauche">
-    <img src="DISCOVER OUR STAFF.png" alt="" class="images_DISCOVER_OUR_STAFF">
+    <img src="/front/All_Section/Our_Team/section3/assets/les images à gauche.png" alt="" class="les_images_à_gauche">
+    <img src="/front/All_Section/Our_Team/section3/assets/DISCOVER OUR STAFF.png" alt="" class="images_DISCOVER_OUR_STAFF">
     <section class="sec3_our_team">
          <div class="container">
             <div class="row">
@@ -33,7 +33,7 @@
                       <p>01</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="image 57 yasser.svg" alt="">
+                    <img src="/front/All_Section/Our_Team/section3/assets/image 57 yasser.svg" alt="">
                 </div>
                 <div class="col-md-4">
                     <h3>YASSER YJJOU <span class="_row3_our_team">0</span></h3>
@@ -50,7 +50,7 @@
                       <p>02</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="image 57 yasser.svg" alt="">
+                    <img src="/front/All_Section/Our_Team/section3/assets/image 57 yasser.svg" alt="">
                 </div>
                 <div class="col-md-4">
                     <h3>YASSER YJJOU <span class="_row3_our_team">0</span></h3>
@@ -67,7 +67,7 @@
                       <p>03</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="image 57 yasser.svg" alt="">
+                    <img src="/front/All_Section/Our_Team/section3/assets/image 57 yasser.svg" alt="">
                 </div>
                 <div class="col-md-4">
                     <h3>YASSER YJJOU <span class="_row3_our_team">0</span></h3>
@@ -84,7 +84,7 @@
                       <p>04</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="image 57 yasser.svg" alt="">
+                    <img src="/front/All_Section/Our_Team/section3/assets/image 57 yasser.svg" alt="">
                 </div>
                 <div class="col-md-4">
                     <h3>YASSER YJJOU <span class="_row3_our_team">0</span></h3>
@@ -101,7 +101,7 @@
                       <p>05</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="image 57 yasser.svg" alt="">
+                    <img src="/front/All_Section/Our_Team/section3/assets/image 57 yasser.svg" alt="">
                 </div>
                 <div class="col-md-4">
                     <h3>YASSER YJJOU <span class="_row3_our_team">0</span></h3>
@@ -118,7 +118,7 @@
                       <p>06</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="image 57 yasser.svg" alt="">
+                    <img src="/front/All_Section/Our_Team/section3/assets/image 57 yasser.svg" alt="">
                 </div>
                 <div class="col-md-4">
                     <h3>YASSER YJJOU <span class="_row3_our_team">0</span></h3>
@@ -135,7 +135,7 @@
                       <p>07</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="image 57 yasser.svg" alt="">
+                    <img src="/front/All_Section/Our_Team/section3/assets/image 57 yasser.svg" alt="">
                 </div>
                 <div class="col-md-4">
                     <h3>YASSER YJJOU <span class="_row3_our_team">0</span></h3>
@@ -152,7 +152,7 @@
                       <p>08</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="image 57 yasser.svg" alt="">
+                    <img src="/front/All_Section/Our_Team/section3/assets/image 57 yasser.svg" alt="">
                 </div>
                 <div class="col-md-4">
                     <h3>YASSER YJJOU <span class="_row3_our_team">0</span></h3>
