fixing paragraphe and quote

--- a/front/All_Section/Our_Team/section2/section2.html
+++ b/front/All_Section/Our_Team/section2/section2.html
@@ -24,8 +24,8 @@
                 <h1 class="row2">I'm <span class="color_yasser t">Yaser</span>,</h1>
                 <h1 class="row2 " >Vice Presiden</h1>
             </div>
-            <div class="row">
-                <div class="col-md-2">
+            <div class="row p-2">
+                <div class="col-md-2 ">
                     <img src="quote-up.png" alt="">
                 </div>
                 <div class="col-md-8"></div>
@@ -35,7 +35,7 @@
             </div>
             <div class="row row4">
                 <div class="col-md-4 ">
-                    <p class="parag">Yaser Yjjou,Vice Presidet and Founder of</p>
+                    <p class="parag">Yaser Yjjou,Vice Presidet and Founder of </p>
                     <p class="parag">the Robotics Club CMC Rabat,passionate</p>
                     <p class="parag">about innovation,technology,and</p>
                     <p class="parag">advancing robotics within the community.</p>
