the ultimate merge V0 of Our team include S1 S2 S4 Footer

--- a/front/One_Page/Home_Page/home_page.html
+++ b/front/One_Page/Home_Page/home_page.html
@@ -64,7 +64,7 @@
             <!-- left text-->
             <div class="row">
                 <div class="col-md-6 col-sm-12 d-flex flex-column pt-3">
-                    <h5 class="robotics_club_cmc py-2">ROBOTICS CLUB CMC - RABAT</h5>
+                    <h5 class="meduim_title py-2">ROBOTICS CLUB CMC - RABAT</h5>
                     <h1 class="fw-bolder slogan py-2"><span class="first-char-slogan">C</span>rafting <br><span class="first-char-slogan">M</span >odeling <br> <span class="first-char-slogan">C</span>oding</h1>
                     <p class="description_club py-2">
                         At Robotics Club CMC Rabat, we specialize in crafting <br> robotics solutions, modeling advanced technology, 
@@ -316,11 +316,7 @@
                     <form action="#" method="post">
                         <input type="search" placeholder="Enter your email . . . "> <br>
                         <button type="submit">Subscribe</button>
-
-
                     </form>
-
-
                 </div>
             </div>
             <div class="row ">
@@ -336,8 +332,6 @@
                         <p class="text-right"><a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></p>
                     </div>
                 </div>
-               
-               
             </div>
         </div>
     </footer>
