fixing our_team

--- a/front/One_Page/Our_Team/our_team.html
+++ b/front/One_Page/Our_Team/our_team.html
@@ -48,8 +48,8 @@
                     id="navbarNav"
                   >
                     <ul class="navbar-nav gap-5">
-                      <li class="nav-item">
-                        <a class="nav-link item-nav" href="#">Home</a>
+                      <li class="nav-item" >
+                        <a class="nav-link item-nav active text-primary" href="#" >Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link item-nav" href="#">Events</a>
@@ -380,7 +380,7 @@
                   </div>
 
                   <!-- Additional slides -->
-                  <div class="carousel-item">
+                  <div class="carousel-item ">
                     <div class="d-flex justify-content-center">
                       <div class="profile-card text-center p-3">
                         <img
@@ -549,7 +549,7 @@
             <h5>Events</h5>
             <ul class="footer-links">
               <li><a href="#">Visits</a></li>
-              <li><a href="#">CLIR</a></li>
+              <li><a href="#">CLR</a></li>
               <li><a href="#">Competitions</a></li>
             </ul>
           </div>
@@ -570,7 +570,7 @@
 
         <div class="row">
           <div class="col-md-12">
-            <div class="footer-bottom d-flex justify-content-around">
+            <div class="footer-bottom d-flex justify-content-between">
               <p class="text-left" style="color: #272626c2">
                 Copyright &copy; 2025 Robotique | Designed by Yasser, kawtar
               </p>
@@ -582,5 +582,8 @@
         </div>
       </div>
     </footer>
+
+
+    <script src="our_team.js"></script>
   </body>
 </html>
