--- a/front/All_Section/Home_Page/section_3/section3.html
+++ b/front/All_Section/Home_Page/section_3/section3.html
@@ -1,58 +1,47 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Robotics Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
+    <title>Robotics CMC - Innovation in Robotics</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
-
-    <!--hamza-->
     <section id="section_3">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="text3">
-                            <img src="/front/section_3/assets/Vector (18).png" alt="" class="round">
+                      <img src="./assets/Vector (18).png" alt="" class="round">
                             <h6 class="mini">Why Choose Us</h6>
                             <h2 class="sec3">Why Robotics CmC is <br> the Perfect Choice</h2>
                             <p class="pra3 text-light">The Robotics Club CMC Rabat fosters innovation, skills, and collaboration in robotics</p>
                             <ul>
-                                <li><img src="/front/section_3/assets/arrow-right-circle.png" alt="">Hands-on Learning</li>
-                                <li><img src="/front/section_3/assets/arrow-right-circle.png" alt="">Innovative Workshops</li>
-                                <li><img src="/front/section_3/assets/arrow-right-circle.png" alt="">Exciting Competitions</li>
-                                <li><img src="/front/section_3/assets/arrow-right-circle.png" alt="">Career Growth</li> 
+                                <li><img src=./assets/arrow-right-circle.png alt="#">Hands-on Learning</li>
+                                <li><img src=./assets/arrow-right-circle.png alt="#">Innovative Workshops</li>
+                                <li><img src=./assets/arrow-right-circle.png alt="#">Exciting Competitions</li>
+                                <li><img src=./assets/arrow-right-circle.png alt="#">Career Growth</li> 
                             </ul> 
-                            <img src="/front/section_3/assets/Line (2).png" alt="" class="image-fluid">
-                            <p class="p2 text-light">join us and shape the futur of robotics!</p>
-                            <div class="d-flex py-2 align-items-center py-2">
-                                <a href="#" class="buttons align-self-center"
-                                  >Explore Now <i class="fas fa-arrow-right"></i
-                                ></a>
-                              </div>
+                            <img src="./assets/Line (2).png" alt="#" class="image-fluid">
+                            <p class="p2 text-light">Join us and shape the future of robotics!</p>
+                            <div class="d-flex py-2 align-items-center">
+                                <a href="#contact" class="buttons">
+                                  Explore Now <i class="fas fa-arrow-right"></i>
+                                </a>
+                            </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="image_3">
-                        <img src="/front/section_3/assets/back.png" class="image-fluid" alt="">
+                        <img src="./assets/back.png" class="img-fluid" alt="Robotics Showcase">
                     </div>
                 </div>
             </div>
         </div>
-       
-
     </section>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
