fixing active nav items

--- a/front/One_Page/Home_Page/home_page.html
+++ b/front/One_Page/Home_Page/home_page.html
@@ -29,13 +29,13 @@
                             <ul class="navbar-nav gap-5">
                              
                               <li class="nav-item">
-                                <a class="nav-link item-nav" href="#">Home</a>
+                                <a class="nav-link item-nav text-primary active" href="#">Home</a>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link item-nav" href="#">Events</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link item-nav text-primary active" href="#">Our Team</a>
+                                <a class="nav-link item-nav " href="#">Our Team</a>
                               </li>
                               
                             </ul>
