--- a/front/One_Page/Our_Team/our_team.html
+++ b/front/One_Page/Our_Team/our_team.html
@@ -49,13 +49,13 @@
                   >
                     <ul class="navbar-nav gap-5">
                       <li class="nav-item" >
-                        <a class="nav-link item-nav active text-primary" href="#" >Home</a>
+                        <a class="nav-link item-nav " href="#" >Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link item-nav" href="#">Events</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link item-nav" href="#">Our Team</a>
+                        <a class="nav-link item-nav active text-primary" href="#">Our Team</a>
                       </li>
                     </ul>
                   </div>
