--- a/front/All_Section/Events/section4/section4.html
+++ b/front/All_Section/Events/section4/section4.html
@@ -9,7 +9,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   />
     <link rel="stylesheet" href="section4.css">
-    <title>section4</title>
+    <title>salam</title>
 </head>
 <body>
 
