add section3 to the one_pg events

--- a/front/One_Page/Events/events.html
+++ b/front/One_Page/Events/events.html
@@ -137,11 +137,54 @@
     </div>
    
 </section>
-<section id="section_3">
-    <div class="container">
+<section class="S3 container-fluid d-flex justify-content-center">
+  <div class="col-md-12">
+    <div class="row d-flex align-items-center">
+      <div class="col-md-3 d-flex justify-content-center align-items-center">
+        <div class="mouse-lt"></div>
+      </div>
+      <div class="col-md-6 text-center pt-3">
+        <h2 class="title-h2">THE</h2>
+        <h1 class="title-h1">PARTICIPANTS</h1>
+        <p class="subtitle">
+          of the last Local<br />Competition of Robotics
+        </p>
+      </div>
+      <div class="col-md-3 d-flex justify-content-center align-items-center">
+        <div class="mouse-rt"></div>
+      </div>
+  </div>
 
+    <div class="row">
+      <div class="col-md-12 d-flex justify-content-center align-items-center p-0 gap-5 my-2">
+        <div class="col-md-5 team team1">
+          <div class="box" id="box1">
+              <div class="img1"></div>
+          </div>
+          <h3 class="team-name1 mt-3">TEAM 1</h3>
+        </div>
+
+        <div class="col-md-5 team team2">
+          <div class="box" id="box2">
+              <div class="img2"></div>
+          </div>
+          <h3 class="team-name2 mt-3">TEAM 2</h3>
+        </div>
+      </div>
     </div>
+    <div class="row d-flex align-items-center pt-5">
+      <div class="col-md-3 d-flex justify-content-center align-items-center">
+        <div class="mouse-bl"></div>
+      </div>
+      <div class="col-md-4">
+      </div>
+      <div class="col-md-4 d-flex justify-content-center align-items-center">
+        <div class="mouse-br"></div>
+      </div>
+    </div>
+  </div>
 </section>
+
 <footer class="footer pt-4">
     <div class="container">
       <div class="row">
