--- a/OurTeam/index.html
+++ b/OurTeam/index.html
@@ -21,7 +21,7 @@
     <section class="S1 bg-white">
       <header>
         <div class="container">
-          <div class="row">
+          <div class="row pt-3">
             <div
               class="col-md-3 col-sm-3 d-flex flex-column flex-md-row align-items-center justify-content-center"
             >
@@ -30,37 +30,29 @@
             <div
               class="col-md-6 col-sm-6 d-flex flex-column flex-md-row align-items-center justify-content-center"
             >
-              <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                  <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav"
-                    aria-controls="navbarNav"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                  >
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div
-                    class="collapse navbar-collapse d-flex justify-content-center"
-                    id="navbarNav"
-                  >
-                    <ul class="navbar-nav gap-5">
-                      <li class="nav-item" >
-                        <a class="nav-link item-nav " href="#" >Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link item-nav" href="#">Events</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link item-nav active text-primary" href="#">Our Team</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
+              <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
+                <ul class="navbar-nav gap-5">
+
+                  <li class="nav-item">
+                    <a class="nav-link item-nav" href="../HomePage/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link item-nav" href="../Events/">Events</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link item-nav active" href="../OurTeam/">Our Team</a>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+          </nav>
             </div>
             <div
               class="col-md-3 col-sm-3 d-flex flex-column flex-md-row align-items-center justify-content-center"
