Fix : done the section of bureau clean

--- a/OurTeam/index.html
+++ b/OurTeam/index.html
@@ -89,11 +89,11 @@
             <div class="three_large_flesh"></div>
           </div>
         </div>
-        <img class="personallity-img" id="userImage" src="./assets/bureau/YaserYjjou.png" alt="Profile Image" />
+        <img class="personallity-img" id="userImage" />
       </div>
     </div>
 
-    <div class="container">
+    <div class="container CS2">
       <div class="row d-flex align-items-center justify-content-center">
         <div class="row d-flex align-items-center justify-content-center">
           <div class="col-md-7 col-lg-6">
@@ -139,7 +139,7 @@
 
     <div class="row">
       <div class="col-md-2">
-        <p class="position_number" id="userNumber">01</p>
+        <p class="position_number " id="userNumber">01</p>
       </div>
     </div>
 
