Feat : Table Member

--- a/OurTeam/index.html
+++ b/OurTeam/index.html
@@ -72,8 +72,9 @@
       </div>
     </div>
   </section>
+
   <section class="S2 d-flex align-items-center justify-content-center">
-      <img class="bg-img" src="./assets/backgroundBureau.png" alt="Profile Image" />
+    <img class="bg-img" src="./assets/backgroundBureau.png" alt="Profile Image" />
     <div class="container container-s2 pt-5">
       <div class="row d-flex align-items-center justify-content-center image_principale">
         <div class="d-flex align-items-center justify-content-center flex-column this">
@@ -152,23 +153,17 @@
       </svg>
     </div>
   </section>
-  <section class="S3">
-    <div class="day-night-carousel">
-      <div class="carousel-circle">
-        <!-- نصف النهار (في الأعلى، يخرج من الشاشة) -->
-        <div class="half-circle day-half">
-          <div>
-            <div class="personality-icon sun-icon"></div>
-            <div class="personality-text">Creative<br>Innovator</div>
-          </div>
+  <img src="./assets/DISCOVER OUR STAFF.png" alt="" class="images_DISCOVER_OUR_STAFF">
+  <section class="S3 pt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h6 class="h6_row2_our_team">EXCLUSIVE MEMBERS</h6>
+          <h1 class="h1_row2_our_team">MEET ALL Our Members</h1>
         </div>
-        <!-- نصف الليل (في الأسفل، يظهر في S3) -->
-        <div class="half-circle night-half">
-          <div>
-            <div class="personality-icon moon-icon"></div>
-            <div class="personality-text">Tech<br>Visionary</div>
-          </div>
-        </div>
+      </div>
+      <div class="parent_sec3_our_team pb-5" id="teamContainer">
+        <div class="loading" id="loading">Loading team members...</div>
       </div>
     </div>
   </section>
