--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <link rel="stylesheet" href="./our_team.css" />
+  <link rel="stylesheet" href="./assets/css/team.css" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="row pt-3">
           <div class="col-md-3 col-sm-3 d-flex flex-column flex-md-row align-items-center justify-content-center">
-            <img src="./assets/Logo_Club.png" alt="robotics_logo" />
+            <img src="./assets/images/team/Logo_Club.png" alt="robotics_logo" />
           </div>
           <div class="col-md-6 col-sm-6 d-flex flex-column flex-md-row align-items-center justify-content-center">
             <nav class="navbar navbar-expand-lg ">
@@ -31,13 +31,13 @@
                   <ul class="navbar-nav gap-5">
 
                     <li class="nav-item">
-                      <a class="nav-link item-nav" href="../HomePage/">Home</a>
+                      <a class="nav-link item-nav" href="./">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link item-nav" href="../Events/">Events</a>
+                      <a class="nav-link item-nav" href="./events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link item-nav active" href="../OurTeam/">Our Team</a>
+                      <a class="nav-link item-nav active" href="./team.html">Our Team</a>
                     </li>
 
                   </ul>
@@ -47,7 +47,7 @@
           </div>
           <div class="col-md-3 col-sm-3 d-flex flex-column flex-md-row align-items-center justify-content-center">
             <div class="contact d-flex">
-              <img src="./assets/call_icon.png" alt="call_icon" class="p-2" />
+              <img src="./assets/images/team/call_icon.png" alt="call_icon" class="p-2" />
               <div class="text">
                 <h6>Need Help?</h6>
                 <h5><a href="+212 625-759877">Call Us!</a></h5>
@@ -74,7 +74,7 @@
   </section>
 
   <section class="S2 d-flex align-items-center justify-content-center">
-    <img class="bg-img" src="./assets/backgroundBureau.png" alt="Profile Image" />
+    <img class="bg-img" src="./assets/images/team/backgroundBureau.png" alt="Profile Image" />
     <div class="container container-s2 pt-5">
       <div class="row d-flex align-items-center justify-content-center image_principale">
         <div class="d-flex align-items-center justify-content-center flex-column this">
@@ -127,12 +127,6 @@
                 d="M39.412 7.00024H9.58803C9.25278 6.99562 8.9199 7.05668 8.60839 7.17994C8.29688 7.3032 8.01286 7.48625 7.77253 7.71863C7.5322 7.95101 7.34028 8.22818 7.20773 8.53429C7.07518 8.8404 7.00459 9.16948 7 9.50271V39.4973C7.00459 39.8305 7.07518 40.1596 7.20773 40.4657C7.34028 40.7718 7.5322 41.049 7.77253 41.2814C8.01286 41.5137 8.29688 41.6968 8.60839 41.8201C8.9199 41.9433 9.25278 42.0044 9.58803 41.9998H39.412C39.7472 42.0044 40.0801 41.9433 40.3916 41.8201C40.7031 41.6968 40.9871 41.5137 41.2275 41.2814C41.4678 41.049 41.6597 40.7718 41.7923 40.4657C41.9248 40.1596 41.9954 39.8305 42 39.4973V9.50271C41.9954 9.16948 41.9248 8.8404 41.7923 8.53429C41.6597 8.22818 41.4678 7.95101 41.2275 7.71863C40.9871 7.48625 40.7031 7.3032 40.3916 7.17994C40.0801 7.05668 39.7472 6.99562 39.412 7.00024ZM17.6162 36.2948H12.3345V20.5451H17.6162V36.2948ZM14.9754 18.3401C14.2469 18.3401 13.5484 18.0525 13.0333 17.5405C12.5182 17.0285 12.2289 16.3342 12.2289 15.6101C12.2289 14.8861 12.5182 14.1917 13.0333 13.6797C13.5484 13.1678 14.2469 12.8802 14.9754 12.8802C15.3621 12.8366 15.7538 12.8747 16.1248 12.992C16.4957 13.1093 16.8376 13.3031 17.1279 13.5608C17.4183 13.8186 17.6506 14.1343 17.8096 14.4875C17.9687 14.8406 18.0509 15.2232 18.0509 15.6101C18.0509 15.9971 17.9687 16.3796 17.8096 16.7328C17.6506 17.0859 17.4183 17.4017 17.1279 17.6594C16.8376 17.9171 16.4957 18.111 16.1248 18.2283C15.7538 18.3456 15.3621 18.3837 14.9754 18.3401ZM36.6655 36.2948H31.3838V27.8425C31.3838 25.725 30.6268 24.3425 28.7077 24.3425C28.1138 24.3468 27.5355 24.532 27.0508 24.873C26.566 25.2141 26.198 25.6947 25.9965 26.25C25.8587 26.6613 25.799 27.0945 25.8204 27.5275V36.2773H20.5387C20.5387 36.2773 20.5387 21.9625 20.5387 20.5276H25.8204V22.75C26.3002 21.9225 26.9981 21.2407 27.8388 20.7782C28.6795 20.3156 29.6313 20.0898 30.5915 20.1251C34.1127 20.1251 36.6655 22.3825 36.6655 27.23V36.2948Z"
                 fill="black" />
             </svg>
-            <svg class="contact-icons" xmlns="http://www.w3.org/2000/svg" width="49" height="48" viewBox="0 0 49 48"
-              fill="black">
-              <path
-                d="M24.5 20.3328C23.6759 20.3331 22.8703 20.5778 22.1853 21.0359C21.5002 21.494 20.9663 22.1449 20.6511 22.9064C20.336 23.6679 20.2537 24.5057 20.4146 25.3139C20.5756 26.1222 20.9726 26.8646 21.5555 27.4472C22.1383 28.0298 22.8808 28.4266 23.6892 28.5872C24.4975 28.7479 25.3353 28.6653 26.0966 28.3498C26.858 28.0344 27.5087 27.5003 27.9666 26.815C28.4244 26.1297 28.6687 25.3241 28.6687 24.5C28.6679 23.3948 28.2284 22.3351 27.4467 21.5537C26.6651 20.7724 25.6052 20.3332 24.5 20.3328ZM34.243 17.1297C34.0308 16.5921 33.7105 16.1038 33.3018 15.6951C32.8931 15.2864 32.4048 14.966 31.8672 14.7539C30.2266 14.1062 26.3203 14.2516 24.5 14.2516C22.6797 14.2516 18.7773 14.1008 17.132 14.7539C16.5944 14.966 16.1061 15.2864 15.6974 15.6951C15.2887 16.1038 14.9684 16.5921 14.7562 17.1297C14.1094 18.7703 14.2539 22.6805 14.2539 24.4992C14.2539 26.318 14.1094 30.2234 14.7594 31.8695C14.9715 32.4072 15.2919 32.8955 15.7006 33.3041C16.1092 33.7128 16.5975 34.0332 17.1352 34.2453C18.7758 34.893 22.682 34.7477 24.5031 34.7477C26.3242 34.7477 30.225 34.8984 31.8703 34.2453C32.4079 34.0332 32.8962 33.7128 33.3049 33.3041C33.7136 32.8955 34.034 32.4072 34.2461 31.8695C34.8984 30.2289 34.7484 26.3188 34.7484 24.5C34.7484 22.6812 34.8984 18.7766 34.2461 17.1305L34.243 17.1297ZM24.5 30.9062C23.233 30.9062 21.9944 30.5305 20.9409 29.8266C19.8874 29.1227 19.0663 28.1222 18.5814 26.9516C18.0965 25.781 17.9697 24.4929 18.2168 23.2502C18.464 22.0075 19.0742 20.866 19.9701 19.9701C20.866 19.0742 22.0075 18.464 23.2502 18.2168C24.4929 17.9697 25.781 18.0965 26.9516 18.5814C28.1222 19.0663 29.1227 19.8874 29.8266 20.9409C30.5305 21.9944 30.9062 23.233 30.9062 24.5C30.9073 25.3416 30.7423 26.1751 30.4207 26.9528C30.0991 27.7305 29.6273 28.4371 29.0322 29.0322C28.4371 29.6273 27.7305 30.0991 26.9528 30.4207C26.1751 30.7423 25.3416 30.9073 24.5 30.9062ZM31.1703 19.3203C30.8745 19.3205 30.5854 19.2329 30.3393 19.0687C30.0933 18.9045 29.9016 18.671 29.7883 18.3978C29.675 18.1246 29.6452 17.8239 29.7029 17.5338C29.7605 17.2436 29.9028 16.9771 30.1119 16.7679C30.321 16.5587 30.5874 16.4162 30.8775 16.3585C31.1676 16.3007 31.4683 16.3303 31.7416 16.4434C32.0149 16.5566 32.2484 16.7482 32.4128 16.9942C32.5771 17.2401 32.6648 17.5292 32.6648 17.825C32.6657 18.0214 32.6277 18.2161 32.5531 18.3978C32.4786 18.5795 32.3688 18.7447 32.2303 18.8839C32.0917 19.0231 31.927 19.1336 31.7457 19.209C31.5643 19.2845 31.3699 19.3233 31.1734 19.3234L31.1703 19.3203ZM38.25 7H10.75C9.75544 7 8.80161 7.39509 8.09835 8.09835C7.39509 8.80161 7 9.75544 7 10.75L7 38.25C7 39.2446 7.39509 40.1984 8.09835 40.9016C8.80161 41.6049 9.75544 42 10.75 42H38.25C39.2446 42 40.1984 41.6049 40.9016 40.9016C41.6049 40.1984 42 39.2446 42 38.25V10.75C42 9.75544 41.6049 8.80161 40.9016 8.09835C40.1984 7.39509 39.2446 7 38.25 7ZM36.9125 29.6562C36.8117 31.6586 36.3547 33.4328 34.893 34.8906C33.4312 36.3484 31.6586 36.8148 29.6586 36.9102C27.5953 37.0266 21.4094 37.0266 19.3461 36.9102C17.3438 36.8094 15.5758 36.3516 14.1117 34.8906C12.6477 33.4297 12.1875 31.6547 12.0922 29.6562C11.9758 27.5922 11.9758 21.4055 12.0922 19.3438C12.193 17.3414 12.6445 15.5672 14.1117 14.1094C15.5789 12.6516 17.3516 12.1906 19.3461 12.0953C21.4094 11.9789 27.5953 11.9789 29.6586 12.0953C31.6609 12.1961 33.4344 12.6539 34.893 14.1148C36.3516 15.5758 36.8172 17.3508 36.9125 19.3531C37.0289 21.4094 37.0289 27.5906 36.9125 29.6562Z"
-                fill="black" />
-            </svg>
           </div>
         </div>
       </div>
@@ -145,7 +139,7 @@
     </div>
 
     <div class="corner-top-left-S2">
-      <img src="./assets/corner-top-left-S2.svg" alt="corner-top-left-S2" />
+      <img src="./assets/images/team/corner-top-left-S2.svg" alt="corner-top-left-S2" />
     </div>
     <div class="corner-bottom-right-S2">
       <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 120 120" fill="none">
@@ -153,7 +147,7 @@
       </svg>
     </div>
   </section>
-  <img src="./assets/DISCOVER OUR STAFF.png" alt="" class="images_DISCOVER_OUR_STAFF">
+  <img src="./assets/images/team/DISCOVER OUR STAFF.png" alt="" class="images_DISCOVER_OUR_STAFF">
   <section class="S3 pt-5">
     <div class="container">
       <div class="row">
@@ -183,7 +177,7 @@
                 <div class="carousel-item active">
                   <div class="d-flex justify-content-center">
                     <div class="profile-card text-center p-3">
-                      <img src="./assets/Group 1086561.png" class="image_developer" width="100" alt="Profile" />
+                      <img src="./assets/images/team/Group 1086561.png" class="image_developer" width="100" alt="Profile" />
 
                       <h5>Wiam AARIKA</h5>
                       <p>
@@ -210,7 +204,7 @@
                       </div>
                     </div>
                     <div class="profile-card text-center p-3">
-                      <img src="./assets/Group 1086561 (1).png" class="image_developer" width="100" alt="Profile" />
+                      <img src="./assets/images/team/Group 1086561 (1).png" class="image_developer" width="100" alt="Profile" />
 
                       <h5>YASSER YJOU</h5>
                       <p>
@@ -237,7 +231,7 @@
                       </div>
                     </div>
                     <div class="profile-card text-center p-3">
-                      <img src="./assets/Group 1086561 (2).png" class="image_developer" width="100" alt="Profile" />
+                      <img src="./assets/images/team/Group 1086561 (2).png" class="image_developer" width="100" alt="Profile" />
 
                       <h5>KAWTAR EL GADDI</h5>
                       <p>
@@ -270,7 +264,7 @@
                 <div class="carousel-item ">
                   <div class="d-flex justify-content-center">
                     <div class="profile-card text-center p-3">
-                      <img src="./assets/Group 1086561.png" class="image_developer" width="100" alt="Profile" />
+                      <img src="./assets/images/team/Group 1086561.png" class="image_developer" width="100" alt="Profile" />
                       <h5>HAMZA EL OUTMANI</h5>
                       <p>
                         a talented Front-End Developer and Designer,
@@ -279,12 +273,12 @@
                         experience.
                       </p>
                       <div class="links">
-                        <a href="#"><img src="./assets/github.png" width="30" alt="GitHub" /></a>
-                        <a href="#"><img src="./assets/linkedin.png" width="30" alt="LinkedIn" /></a>
+                        <a href="#"><img src="./assets/images/home/github.png" width="30" alt="GitHub" /></a>
+                        <a href="#"><img src="./assets/images/home/linkedin.png" width="30" alt="LinkedIn" /></a>
                       </div>
                     </div>
                     <div class="profile-card text-center p-3">
-                      <img src="./assets/Group 1086561 (1).png" class="image_developer" width="100" alt="Profile" />
+                      <img src="./assets/images/team/Group 1086561 (1).png" class="image_developer" width="100" alt="Profile" />
                       <h5>SIHAM ZIRARI</h5>
                       <p>
                         a talented Front-End Developer and Designer,
@@ -293,12 +287,12 @@
                         experience.
                       </p>
                       <div class="links">
-                        <a href="#"><img src="./assets/github.png" width="30" alt="GitHub" /></a>
-                        <a href="#"><img src="./assets/linkedin.png" width="30" alt="LinkedIn" /></a>
+                        <a href="#"><img src="./assets/images/home/github.png" width="30" alt="GitHub" /></a>
+                        <a href="#"><img src="./assets/images/home/linkedin.png" width="30" alt="LinkedIn" /></a>
                       </div>
                     </div>
                     <div class="profile-card text-center p-3">
-                      <img src="./assets/Group 1086561 (2).png" class="image_developer" width="100" alt="Profile" />
+                      <img src="./assets/images/team/Group 1086561 (2).png" class="image_developer" width="100" alt="Profile" />
                       <h5>HIBA IHSANE</h5>
                       <p>
                         a talented Front-End Developer and Designer,
@@ -307,8 +301,8 @@
                         experience.
                       </p>
                       <div class="links">
-                        <a href="#"><img src="./assets/github.png" width="30" alt="GitHub" /></a>
-                        <a href="#"><img src="./assets/linkedin.png" width="30" alt="LinkedIn" /></a>
+                        <a href="#"><img src="./assets/images/home/github.png" width="30" alt="GitHub" /></a>
+                        <a href="#"><img src="./assets/images/home/linkedin.png" width="30" alt="LinkedIn" /></a>
                       </div>
                     </div>
                   </div>
@@ -334,12 +328,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <img src="./assets/Line.png" alt="" />
+          <img src="./assets/images/home/Line.png" alt="" />
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
-          <img src="./assets/image.png" alt="" />
+          <img src="./assets/images/team/image.png" alt="" />
           <p class="parag-foot">
             Feel free to call us . Our team will be happy to <br />
             help answer your queries
@@ -348,16 +342,16 @@
             625-759877</a>
           <br /><br />
           <a href="">
-            <img src="./assets/Icon 1.png" alt="" />
+            <img src="./assets/images/home/Icon 1.png" alt="" />
           </a>
           <a href="">
-            <img src="./assets/Icon 2.png" alt="" />
+            <img src="./assets/images/home/Icon 2.png" alt="" />
           </a>
           <a href="">
-            <img src="./assets/Icon 3.png" alt="" />
+            <img src="./assets/images/home/Icon 3.png" alt="" />
           </a>
           <a href="">
-            <img src="./assets/Icon 4.png" alt="" />
+            <img src="./assets/images/home/Icon 4.png" alt="" />
           </a>
         </div>
         <div class="col-md-2">
@@ -388,7 +382,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <img src="./assets/Line.png" alt="" />
+          <img src="./assets/images/home/Line.png" alt="" />
         </div>
       </div>
 
@@ -408,7 +402,7 @@
   </footer>
 
 
-  <script src="our_team.js"></script>
+  <script src="./assets/js/team.js"></script>
 </body>
 
 </html>
