--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Robotics Club CMC</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="events.css">
+  <link rel="stylesheet" href="assets/css/events.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row mt-3">
         <div class="col-md-3 col-sm-3 d-flex flex-column flex-md-row align-items-center justify-content-center">
-          <img src="./assets/Logo_Club (2).png  " alt="robotics_logo">
+          <img src="assets/images/events/Logo_Club (2).png" alt="robotics_logo">
         </div>
         <div class="col-md-6 col-sm-6 d-flex flex-column flex-md-row align-items-center justify-content-center">
           <nav class="navbar navbar-expand-lg ">
@@ -27,13 +27,13 @@
                 <ul class="navbar-nav gap-5">
 
                   <li class="nav-item">
-                    <a class="nav-link item-nav" href="../HomePage/">Home</a>
+                    <a class="nav-link item-nav" href="./">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link item-nav active" href="../Events/">Events</a>
+                    <a class="nav-link item-nav active" href="./events.html">Events</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link item-nav " href="../OurTeam/">Our Team</a>
+                    <a class="nav-link item-nav " href="./team.html">Our Team</a>
                   </li>
 
                 </ul>
@@ -43,7 +43,7 @@
         </div>
         <div class="col-md-3 col-sm-3 d-flex flex-column flex-md-row align-items-center justify-content-center">
           <div class="contact d-flex">
-            <img src="./assets/Icon (3).png" alt="call_icon" class="p-2">
+            <img src="assets/images/events/Icon (3).png" alt="call_icon" class="p-2">
             <div class="text">
               <h6>Need Help?</h6>
               <h5><a href="+212 625-759877">Call Us!</a></h5>
@@ -74,7 +74,7 @@
             <a href="#" class="btn btn-primary" id="link">Explore The Project →</a>
           </div>
           <div class="col-md-6">
-            <img src="./assets/Vector 3 (1).png" alt="Event" class="img-fluid image1">
+            <img src="assets/images/events/Vector 3 (1).png" alt="Event" class="img-fluid image1">
 
           </div>
         </div>
@@ -100,7 +100,7 @@
                 skills,and explore cutting-edge innovation in robotics.Don't miss the <br>
                 chance to be part of a growing community shaping the future of technology!
               </p>
-              <img src="./assets/le_fliche.png" alt="">
+              <img src="assets/images/events/le_fliche.png" alt="">
               <a href="" class="our_events">Our Events</a>
             </div>
           </div>
@@ -117,16 +117,16 @@
                 <div class="row g-4">
                   <div class="col-md-6">
                     <div class="img-card">
-                      <img src="./assets/WhatsApp Image 2025-03-02 at 21.21.30.jpeg" class="img-fluid im1"
+                      <img src="assets/images/events/WhatsApp Image 2025-03-02 at 21.21.30.jpeg" class="img-fluid im1"
                         alt="Group Discussion">
                     </div>
                   </div>
                   <div class="col-md-6 d-flex flex-column">
                     <div class="img-card mb-3">
-                      <img src="./assets/image3_events.png" class="img-fluid im2" alt="Tech Showcase">
+                      <img src="assets/images/events/image3_events.png" class="img-fluid im2" alt="Tech Showcase">
                     </div>
                     <div class="img-card">
-                      <img src="./assets/WhatsApp Image 2025-03-02 at 21.21.29.jpeg" class="img-fluid im3"
+                      <img src="assets/images/events/WhatsApp Image 2025-03-02 at 21.21.29.jpeg" class="img-fluid im3"
                         alt="Presentation">
                     </div>
                   </div>
@@ -199,12 +199,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <img src="./assets/Line.png" alt="" />
+          <img src="assets/images/events/Line (3).png" alt="" />
         </div>
       </div>
       <div class="row p-3">
         <div class="col-md-4" style="margin-bottom: 10px;">
-          <img src="./assets/image.png" alt="" />
+          <img src="assets/images/events/image.png" alt="" />
           <p class="parag-foot">
             Feel free to call us . Our team will be happy to <br />
             help answer your queries
@@ -213,24 +213,24 @@
             625-759877</a>
           <br /><br />
           <a href="">
-            <img src="./assets/Icon 1.png" alt="" />
+            <img src="assets/images/events/Icon 1.png" alt="" />
           </a>
           <a href="">
-            <img src="./assets/Icon 2.png" alt="" />
+            <img src="assets/images/events/Icon 2.png" alt="" />
           </a>
           <a href="">
-            <img src="./assets/Icon 3.png" alt="" />
+            <img src="assets/images/events/Icon 3 (1).png" alt="" />
           </a>
           <a href="">
-            <img src="./assets/Icon 4.png" alt="" />
+            <img src="assets/images/events/Icon 4.png" alt="" />
           </a>
         </div>
         <div class="col-md-2">
           <h5>Robotics</h5>
           <ul class="footer-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Our Team</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="./events.html">Events</a></li>
+            <li><a href="./team.html">Our Team</a></li>
           </ul>
         </div>
 
@@ -253,7 +253,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <img src="./assets/Line.png" alt="" />
+          <img src="assets/images/events/Line (3).png" alt="" />
         </div>
       </div>
 
