--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <link rel="stylesheet" href="Home_style.css">
+  <link rel="stylesheet" href="assets/css/home.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       <div class="row mt-3">
         <div class="col-md-3 col-sm-3 d-flex flex-column flex-md-row align-items-center justify-content-center">
           <a href="./">
-            <img src="./assets/Logo_Club.png" alt="robotics_logo" class="img-fluid">
+            <img src="assets/images/home/Logo_Club.png" alt="robotics_logo" class="img-fluid">
           </a>
         </div>
         <div class="col-md-6 col-sm-6 d-flex flex-column flex-md-row align-items-center justify-content-center">
@@ -32,13 +32,13 @@
                 <ul class="navbar-nav gap-5">
 
                   <li class="nav-item">
-                    <a class="nav-link item-nav active" href="../HomePage/">Home</a>
+                    <a class="nav-link item-nav active" href="./">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link item-nav" href="../Events/">Events</a>
+                    <a class="nav-link item-nav" href="./events.html">Events</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link item-nav " href="../OurTeam/">Our Team</a>
+                    <a class="nav-link item-nav " href="./team.html">Our Team</a>
                   </li>
 
                 </ul>
@@ -48,7 +48,7 @@
         </div>
         <div class="col-md-3 col-sm-3 d-flex flex-column flex-md-row align-items-center justify-content-center">
           <div class="contact d-flex">
-            <img src="./assets/call_icon.png" alt="call_icon" class="p-2">
+            <img src="assets/images/home/call_icon.png" alt="call_icon" class="p-2">
             <div class="text">
               <h6>Need Help?</h6>
               <h5><a href="+212 625-759877">Call Us!</a></h5>
@@ -91,25 +91,25 @@
           </div>
           <div class="logos py-2">
             <h6 class="trusted-text"> Trusted by many companies</h6>
-            <img src="./assets/logo_client.png" alt="cmc/ofppt_logos">
+            <img src="assets/images/home/logo_client.png" alt="cmc/ofppt_logos">
           </div>
         </div>
         <!-- scrooling pictures-->
         <div class="col-md-6 col-sm-12 d-flex flex-wrap some">
           <div class="carousel-container">
             <div class="image-track">
-              <img src="./assets/Fun Fact.png" alt="Image 1" class="img1">
-              <img src="./assets/Icon Box.png" alt="Image 2" class="img3">
-              <img src="./assets/Slide_Image.png" alt="Image 3" class="img2">
-              <img src="./assets/Rating.png" alt="Image 4" class="img8">
-              <img src="./assets/Slide_Image.png" alt="Image 5" class="img5">
+              <img src="assets/images/home/Fun Fact.png" alt="Image 1" class="img1">
+              <img src="assets/images/home/Icon Box.png" alt="Image 2" class="img3">
+              <img src="assets/images/home/Slide_Image.png" alt="Image 3" class="img2">
+              <img src="assets/images/home/Rating.png" alt="Image 4" class="img8">
+              <img src="assets/images/home/Slide_Image.png" alt="Image 5" class="img5">
             </div>
             <div class="image-track">
-              <img src="./assets/Slide_Image.png" alt="Image 6" class="img3">
-              <img src="./assets/Fun Fact.png" alt="Image 7" class="img4">
-              <img src="./assets/Slide_Image.png" alt="Image 8" class="img8">
-              <img src="./assets/Icon Box.png" alt="Image 9" class="img9">
-              <img src="./assets/Rating.png" alt="Image 10" class="img2">
+              <img src="assets/images/home/Slide_Image.png" alt="Image 6" class="img3">
+              <img src="assets/images/home/Fun Fact.png" alt="Image 7" class="img4">
+              <img src="assets/images/home/Slide_Image.png" alt="Image 8" class="img8">
+              <img src="assets/images/home/Icon Box.png" alt="Image 9" class="img9">
+              <img src="assets/images/home/Rating.png" alt="Image 10" class="img2">
 
             </div>
 
@@ -172,17 +172,17 @@
       <div class="row">
         <div class="col-md-6">
           <div class="text3">
-            <img src="./assets/Vector (15).png" alt="" class="round">
+            <img src="assets/images/home/Vector (15).png" alt="" class="round">
             <h6 class="mini">Why Choose Us</h6>
             <h2 class="sec3">Why Robotics CmC is <br> the Perfect Choice</h2>
             <p class="pra3">The Robotics Club CMC Rabat fosters innovation, skills, and collaboration in robotics</p>
             <ul class="list">
-              <li><img src="./assets/arrow-right-circle.png" alt="">Hands-on Learning</li>
-              <li><img src="./assets/arrow-right-circle.png" alt="">Innovative Workshops</li>
-              <li><img src="./assets/arrow-right-circle.png" alt="">Exciting Competitions</li>
-              <li><img src="./assets/arrow-right-circle.png" alt="">Career Growth</li>
+              <li><img src="assets/images/home/arrow-right-circle.png" alt="">Hands-on Learning</li>
+              <li><img src="assets/images/home/arrow-right-circle.png" alt="">Innovative Workshops</li>
+              <li><img src="assets/images/home/arrow-right-circle.png" alt="">Exciting Competitions</li>
+              <li><img src="assets/images/home/arrow-right-circle.png" alt="">Career Growth</li>
             </ul>
-            <img src="./assets/Line (1).png" alt="" class="image-fluid">
+            <img src="assets/images/home/Line (1).png" alt="" class="image-fluid">
             <p class="p2">join us and shape the futur of robotics!</p>
             <div class="d-flex py-2 align-items-center py-2">
               <a href="#" class="buttons align-self-center">Explore Now <i class="fas fa-arrow-right"></i></a>
@@ -191,7 +191,7 @@
         </div>
         <div class="col-md-6">
           <div class="image_3">
-            <img src="./assets/back.png" class="image-fluid" alt="">
+            <img src="assets/images/home/back.png" class="image-fluid" alt="">
           </div>
         </div>
       </div>
@@ -216,31 +216,31 @@
       </div>
       <div class="row mt-5">
         <div class="col-md-3" class="div1">
-          <img src="./assets/imag1.png" alt="" class="img-fluid">
+          <img src="assets/images/home/imag1.png" alt="" class="img-fluid">
         </div>
         <div class="col-md-3" class="div1">
-          <img src="./assets/img7.png" alt="" class="img-fluid">
+          <img src="assets/images/home/img7.png" alt="" class="img-fluid">
         </div>
         <div class="col-md-3" class="div1">
-          <img src="./assets/image3.png" alt="club_activity" class="img-fluid">
+          <img src="assets/images/home/image3.png" alt="club_activity" class="img-fluid">
         </div>
         <div class="col-md-3" class="div1">
-          <img src="./assets/image4.png" alt="club_activity" class="img-fluid">
+          <img src="assets/images/home/image4.png" alt="club_activity" class="img-fluid">
         </div>
       </div>
       <div class="row ">
         <div class="col-md-3" class="div1">
-          <img src="./assets/imag5.png" alt="club_activity" class="img-fluid">
+          <img src="assets/images/home/imag5.png" alt="club_activity" class="img-fluid">
         </div>
         <div class="col-md-3" class="div1">
-          <img src="./assets/imag6.png" alt="club_activity" class="img-fluid">
+          <img src="assets/images/home/imag6.png" alt="club_activity" class="img-fluid">
         </div>
         <div class="col-md-3" class="div1">
-          <img src="./assets/img7.png" alt="club_activity" class="img-fluid">
+          <img src="assets/images/home/img7.png" alt="club_activity" class="img-fluid">
         </div>
         <div class="col-md-3 img9">
           <a href="" class="lien_img9">
-            <img src="./assets/img9.png" alt="explore_more" class="img-fluid">
+            <img src="assets/images/home/img9.png" alt="explore_more" class="img-fluid">
             <span class="text-overlay">Explore Our Work</span>
           </a>
         </div>
@@ -253,7 +253,7 @@
     <div class="video-container">
 
       <div class="overlay">
-        <img src="./assets/Window.png" alt="ved" class="img-fluid">
+        <img src="assets/images/home/Window.png" alt="ved" class="img-fluid">
       </div>
 
     </div>
@@ -264,12 +264,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <img src="./assets/Line.png" alt="" />
+          <img src="assets/images/home/Line.png" alt="" />
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
-          <img src="./assets/image.png" alt="" />
+          <img src="assets/images/home/image.png" alt="" />
           <p class="parag-foot">
             Feel free to call us . Our team will be happy to <br />
             help answer your queries
@@ -278,24 +278,24 @@
             625-759877</a>
           <br /><br />
           <a href="">
-            <img src="./assets/Icon 1.png" alt="" />
+            <img src="assets/images/home/Icon 1.png" alt="" />
           </a>
           <a href="">
-            <img src="./assets/Icon 2.png" alt="" />
+            <img src="assets/images/home/Icon 2.png" alt="" />
           </a>
           <a href="">
-            <img src="./assets/Icon 3.png" alt="" />
+            <img src="assets/images/home/Icon 3.png" alt="" />
           </a>
           <a href="">
-            <img src="./assets/Icon 4.png" alt="" />
+            <img src="assets/images/home/Icon 4.png" alt="" />
           </a>
         </div>
         <div class="col-md-2">
           <h5>Robotics</h5>
           <ul class="footer-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Our Team</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="./events.html">Events</a></li>
+            <li><a href="./team.html">Our Team</a></li>
           </ul>
         </div>
 
@@ -318,7 +318,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <img src="./assets/Line.png" alt="" />
+          <img src="assets/images/home/Line.png" alt="" />
         </div>
       </div>
 
@@ -338,7 +338,7 @@
   </footer>
   </div>
 
-  <script src="home_page.js"></script>
+  <script src="assets/js/home.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
